--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	.modify_this{
 		color: green;
 		font-weight: bold;
-		background-color: orange;
+		background-color: cornflowerblue;
 	}
 	.modify_this_too{
 		color: black;
